# uwp_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: uwp_main.rviz  uwp_main.yaml  uwp_plotter.rviz  uwp_plotter.yaml
experimental/boundary_profile/: boundary_profile.m  fluent_boundary_profile.c
experimental/fluent_analysis/: getBaryCoords.m  getObs.m  getStatsGrid.m  interpolateGrid.m  loadData.m  main.m  nearestGrid.m  plotGrid.m  plotGridCovs.m  plotGridVels.m  plotMesh.m  plotNNDists.m  plotNodeVels.m  regularizeGrid.m  reshapeGrid.m  saveData.m  testTets.m
experimental/fluent_analysis/mshread/: mshread.m
experimental/mems_anemometer/1x1_test1/: analysis.m
experimental/mems_anemometer/wbwt_test1/: analysis_full.m  test_plan.m  wspi_calc.m
experimental/mems_anemometer/wbwt_test1/calibration/: PV1_n.txt  PV2_n.txt
experimental/mems_anemometer/wbwt_test1/old/: analysis_noprops_yaw0.m  analysis_noprops_yaw0_pitch.m  analysis_noprops_yaw45.m  analysis_noprops_yaw90.m  analysis_props_yaw0.m  analysis_props_yaw0_pitch.m  analysis_props_yaw45.m  analysis_props_yaw90.m  comparison.m
experimental/planning_actions/: compute_orientations.m  create_actions.m  create_single_action.m  generate_trajectory.m  hat.m  plot_quad.m  plot_trajectory.m  quad_dynamics.m  quad_ff_sim_matlab.m  simulate_quad.m  single_spline_1d.m
experimental/planning_actions/trajectory_generation/: QP_elimination_solve.m  poly_opt_single.m  poly_opt_single_constraint_final_mat.m  poly_opt_single_cost_mat.m
experimental/planning_actions/trajectory_generation/.svn/: wc.db
experimental/power_consumption/model/: ang_speed_power.m  ang_speed_thrust.m  contour_test.m  cost_func.m  drag.m  drag_area.m  f1.m  min_energy_2d.nb  min_energy_2d_const_area.m  min_energy_2d_fmin.m  min_energy_2d_vary_area.m  nonlcon_2d.m  optimal_ground_speed_fixed_flow.m  optimal_ground_speed_fixed_ground.m
experimental/power_consumption/model_felipe/: aero_model_eqs_inflow.m  aero_model_eqs_interp.m
experimental/power_consumption/wbwt_test1/: comparison_all.m  comparison_set1.m  comparison_set2.m  mean_power.mat  mean_wind.mat  stderr_power.mat
experimental/wunderground_analysis/: analysis_check.m  analysis_day.m  analysis_figs.m  analysis_gp_test_day.m  analysis_gp_test_win.m  analysis_main.m  analysis_plot_day.m  analysis_plot_win.m  analysis_ut.m  analysis_window.m  data_size.mat  filter_data.m  get_data.py  read_data.m  time_pdf_analysis.m
launch/: uwp_main.launch  uwp_plotter.launch
plugins/: nodelet_plugins.xml
src/: CMakeLists.txt  uwp_main.cc  uwp_plotter.cc
src/uwp_app/: flow_plan_app.cc  flow_plan_app.h  uwp_app.cc  uwp_app.h
src/uwp_astar/: uwp_astar.cc  uwp_astar.h
src/uwp_data/: uwp_data.cc  uwp_data.h
src/uwp_node/: uwp_node.cc  uwp_node.h
src/uwp_planner/: uwp_planner.cc  uwp_planner.h
